fix: Resolve JWT signing and login issues
- Switch to JJWT library for token generation
- Add proper 256-bit hex secret key
- Create StartupBean for user initialization
- Remove hardcoded BCrypt hashes
- Add debug logging
- Fix login flow

Login now works: admin/admin123